--- a/pesde.toml
+++ b/pesde.toml
@@ -1,5 +1,5 @@
 name = "kimpure/chalk_luau"
-version = "0.1.2"
+version = "0.1.3"
 description = "Roblox/chalk-lua for Luau"
 authors = ["Roblox", "kimpure"]
 repository = "https://github.com/kimpure/chalk-luau"
@@ -13,3 +13,7 @@ build_files = ["src"]
 
 [indices]
 default = "https://github.com/pesde-pkg/index"
+
+[dev_dependencies]
+darklua = { name = "pesde/darklua", version = "^0.16.0", target = "lune" }
+multitarget = { name = "jiwonz/multitarget", version = "^0.4.0-rc.28", target = "lune" }
