--- a/pesde.toml
+++ b/pesde.toml
@@ -1,14 +1,14 @@
 name = "kimpure/chalk_luau"
-version = "0.1.6"
+version = "0.1.7"
 description = "Roblox/chalk-lua for Luau"
 authors = ["Roblox", "kimpure"]
 repository = "https://github.com/kimpure/chalk-luau"
 license = "MIT"
-includes = ["src/**", "README.md", "LICENSE.md", "pesde.toml"]
+includes = ["src/**/*.luau", "README.md", "LICENSE.md", "pesde.toml"]
 
 [target]
 environment = "luau"
-lib = "src/init.luau"
+lib = "src/lib.luau"
 build_files = ["src"]
 
 [indices]
